--- a/esercitazioni/04-06-orologio/index.html
+++ b/esercitazioni/04-06-orologio/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'ora esatta</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Che ore sono?</title>
 </head>
 <body>
     <div class="counter"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
